blockquote aria-label

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         </ol>
                     </nav>
 
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>É só fazer do jeito que eu to falando que entregamos na data correta.</p>
                         <cite>Diretor TI POG sobre projeto com tempo recorde!</cite>
                     </blockquote>
@@ -139,7 +139,7 @@
                     <p class="lead color4-darker">Paradigma de desenvolvimento de software no qual se utiliza um improviso planejado temporário permanente na resolução de um problema.</p>
                     <p>Tende a gerar mais problemas do que resolve.</p>
                     <p class="color5-darker">Emprego garantido!</p>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>A culpa é do Hardware!</p>
                         <cite>Desenvolvedor de software sobre POG</cite>
                     </blockquote>
@@ -165,7 +165,7 @@
                         </div>
                         <h3>29 de Fevereiro – Dia Internacional da POG</h3>
                     </div>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>O Papa é POG</p>
                         <cite>Engenheiros do Hawaii sobre POG</cite>
                     </blockquote>
@@ -180,7 +180,7 @@
                         <li>Deploy em produção na sexta-feira às 18h</li>
                         <li>Aproximação da demo para stakeholders</li>
                     </ul>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>TypeError: Cannot read property 'map' of undefined</p>
                         <cite>React sobre POG</cite>
                     </blockquote>
@@ -195,7 +195,7 @@
                         <li>Processo Ágil com 15 reuniões por semana!</li>
                         <li>Ausência de café e Wi-Fi instável</li>
                     </ul>
-                     <blockquote>
+                     <blockquote role="note" aria-label="Citação satírica">
                         <p>Eu só copiei do Stack Overflow!</p>
                         <cite>Dev Junior utilizando ChatGPT e copilot ao mesmo tempo</cite>
                     </blockquote>
@@ -213,7 +213,7 @@
                         <dt class="color4-darker">Redireção Tangencial</dt>
                         <dd>A culpa não é minha!</dd>
                     </dl>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Se compilou é porque funciona!</p>
                         <cite>Você, ao fazer POG</cite>
                     </blockquote>
@@ -231,7 +231,7 @@
                         <dt class="color4-darker">Imperativo Funcional</dt>
                         <dd>O importante é funcionar!</dd>
                     </dl>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Esta é a solução ótima, não temos tempo para isso. Faça a solução boa! O ótimo é inimigo do bom.</p>
                         <cite>Líder de Projeto sobre POG</cite>
                     </blockquote>
@@ -249,7 +249,7 @@
                         <dt class="color4-darker">Foco Morcegativo</dt>
                         <dd>Depois eu faço isso!</dd>
                     </dl>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>É fácil, não vejo dificuldade em fazer isso!</p>
                         <cite>Gerente sem-noção definindo prazo junto com o POGgramador</cite>
                     </blockquote>
@@ -267,7 +267,7 @@
                         <dt class="color4-darker">Criptocodagem</dt>
                         <dd>1337 h4x0r5 dud3 lol</dd>
                     </dl>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Reza e cruza os dedos que vai funcionar! </p>
                         <cite>POG Pai de Santo falando para um POGramador menos experiente... </cite>
                     </blockquote>
@@ -285,7 +285,7 @@
                         <dt class="color4-darker">Simplicidade Indolente</dt>
                         <dd>Se tá funcionando sem isso, pra que colocar?</dd>
                     </dl>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Vai programando aí que eu vou ver o que o cliente quer</p>
                         <cite>Gerente sem-noção sobre POG</cite>
                     </blockquote>
@@ -319,7 +319,7 @@
                        </div>
                    </div>
 
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Works on my Docker container</p>
                         <cite>POGramador DevOps sobre POG</cite>
                     </blockquote>
@@ -346,7 +346,7 @@
                             </ul>
                         </div>
                     </div>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Limpa o localStorage, fecha todas as abas e abre em anônimo que funciona</p>
                         <cite>Resposta padrão do Dev Frontend sobre POG</cite>
                     </blockquote>
@@ -375,7 +375,7 @@
                             </ul>
                         </div>
                     </div>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Passou no pipeline do CI/CD, então tá liberado pra prod!</p>
                         <cite>POGramador confiando cegamente na automação</cite>
                     </blockquote>
@@ -406,7 +406,7 @@
                             </ul>
                         </div>
                     </div>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Não me interessa se quebra em produção, o importante é entregar a sprint!</p>
                         <cite>Scrum Master pressionando a equipe a criar POG</cite>
                     </blockquote>
@@ -432,7 +432,7 @@ Optional.ofNullable(user)
 
                     <img class="img-50 img-center" src="img/wat.png" alt="Meme wat - pessoa confusa olhando código incompreensível">
 
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>É só colocar um IF!!</p>
                         <cite>Gerente sem-noção sugerindo a solução técnica</cite>
                     </blockquote>
@@ -445,7 +445,7 @@ Optional.ofNullable(user)
                         <li>A baixa adaptabilidade e difícil manutenção tornam o programa mais estável</li>
                         <li>Se precisar alterar, copie e cole de novo!</li>
                     </ul>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Tive que arrumar direto no banco - daí funcionou! Se o problema "voltar", nos ligue novamente.</p>
                         <cite>POGger sobre O Poder da Fé.</cite>
                     </blockquote>
@@ -466,7 +466,7 @@ const DB_PASSWORD = "admin123";
 fetch(`https://api.stripe.com`, { headers: { Authorization: API_KEY }});
                     </code></pre>
 
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Não se preocupa, eu reverto o commit depois que subir pra prod!</p>
                         <cite>POGgramador com segredos no repositório público</cite>
                     </blockquote>
@@ -495,7 +495,7 @@ public void processar() {
     userService.save(user);
 }
                     </code></pre>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>O código tá certo, deve ser problema no Spring Boot.</p>
                         <cite>POGgramador Java com várias certificações Oracle</cite>
                     </blockquote>
@@ -510,7 +510,7 @@ public void processar() {
                         <li>De preferência, use o @SuppressWarnings("all")</li>
                     </ul>
                     <img src="img/warnings.png" alt="Screenshot mostrando dezenas de avisos do compilador e IDE sendo ignorados pelo programador" class="img-50 img-center">
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Terminei, só falta rodar o mvn test.</p>
                         <cite>POGramador Java, às 18h00, com a mochila nas costas</cite>
                     </blockquote>
@@ -531,7 +531,7 @@ jaTrocouDeAba, botaoClicado, foiAtualizado, passouPorAqui
 numeroMagico, naoAchou, temErro
 anterior5, atual5, anteriorDoAnterior5
                     </code></pre>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>É só reiniciar que funciona!</p>
                         <cite>POGramador logo de manhã com copo de café na mão</cite>
                     </blockquote>
@@ -545,7 +545,7 @@ anterior5, atual5, anteriorDoAnterior5
                         <li>A partir desse momento, o comentário vira parte do código</li>
                         <li>Se alguém mexer, para tudo</li>
                     </ul>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Bom, deixa estourar a bomba lá, aí quando vierem me pentelhar aqui eu vejo o que faço... </p>
                         <cite>POGramador para outro POGramador, só esperando o problema voltar </cite>
                     </blockquote>
@@ -573,7 +573,7 @@ if (number.equals("1")) {
     return 10000000;
 }
                     </code></pre>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Hmmm.. que estranho... Não era para acontecer isso...</p>
                         <cite>Programador fazendo uma demonstração do software</cite>
                     </blockquote>
@@ -585,7 +585,7 @@ if (number.equals("1")) {
                         <li>Capture e trate TODO tipo de problema que ocorrer</li>
                     </ul>
                     <img src="img/galdalf.png" alt="Gandalf do Senhor dos Anéis gritando You Shall Not Pass, representando o bloqueio de todas as exceções" class="img-center img-70">
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Que lixo que fizeram!!! Olha isso!!</p>
                         <cite>POGgramador falando sobre o código de outro POGgramador</cite>
                     </blockquote>
@@ -610,7 +610,7 @@ public ResponseEntity<String> processar(Request req) {
     }
 }
                     </code></pre>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Ah! Deve ser o Hibernate fazendo lazy loading!</p>
                         <cite>POGramador Java tentando ganhar tempo</cite>
                     </blockquote>
@@ -642,7 +642,7 @@ public class GlobalExceptionHandler {
     }
 }
                     </code></pre>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>É padrão do Spring Boot, achei no Baeldung!</p>
                         <cite>Gambizeiro Java tirando o seu da reta</cite>
                     </blockquote>
@@ -666,7 +666,7 @@ public ResponseEntity processar(@RequestBody String dados) {
     return ResponseEntity.ok("Processado: " + nome);
 }
                     </code></pre>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Jackson? Muito pesado! String é mais performático!</p>
                         <cite>POGramador Java sênior otimizando o sistema</cite>
                     </blockquote>
@@ -693,7 +693,7 @@ public class ProcessamentoService {
     }
 }
                     </code></pre>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Ontem o build do Maven estava passando!</p>
                         <cite>POGramador ao ver 47 testes falhando</cite>
                     </blockquote>
@@ -708,7 +708,7 @@ public class ProcessamentoService {
                         <li>É o capiroto em forma de design pattern!</li>
                     </ul>
                     <img src="img/cat.jpg" alt="Gato preto em sala escura - metáfora para usar Map com Object ao invés de parâmetros tipados" class="img-center img-50">
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Tem bug, mas é culpa do Tomcat!</p>
                         <cite>Estagiário Java justificando ClassCastException</cite>
                     </blockquote>
@@ -723,7 +723,7 @@ public class ProcessamentoService {
                         <li>SOLID? Nunca ouvi falar!</li>
                     </ul>
                     <img src="img/megaman.png" alt="Mega Man, personagem de videogame, representando um método gigante que faz todas as funcionalidades" class="img-center img-50">
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>É só adicionar mais um IF aqui dentro!</p>
                         <cite>POGramador Java abrindo o método de 2000 linhas</cite>
                     </blockquote>
@@ -735,7 +735,7 @@ public class ProcessamentoService {
                         <li>A fusão entre um Megazord e um Gato preto em Quarto Escuro cria um Thunder Megazord</li>
                     </ul>
                     <img src="img/megamanx.png" alt="Mega Man X, versão evoluída representando a fusão de múltiplos anti-padrões em um único método" class="img-center img-50">
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>O Senhor já tentou reiniciar seu computador? Caso sim vou pedir que desligue seu modem e religue novamente...</p>
                         <cite>Atendente da CTBC ou Velox utilizando técnicas de TelePOG</cite>
                     </blockquote>
@@ -752,7 +752,7 @@ export const processar = async (parametros: any): Promise<any> => {
     }
 }
                     </code></pre>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Não funciona no Safari? Pede pro usuário usar Chrome!</p>
                         <cite>POGramador Frontend ignorando 20% dos usuários</cite>
                     </blockquote>
@@ -767,7 +767,7 @@ export const processar = async (parametros: any): Promise<any> => {
                         <li>Conexão direta com banco no Controller</li>
                         <li>3000 linhas de código feliz</li>
                     </ul>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Arquitetura em camadas deixa o Spring Boot mais lento!</p>
                         <cite>POGramador Java sobre performance inexistente</cite>
                     </blockquote>
@@ -784,7 +784,7 @@ export const processar = async (parametros: any): Promise<any> => {
                         <li>500 linhas num arquivo index.tsx</li>
                     </ul>
 
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Deu erro? Coloca um try-catch e console.log!</p>
                         <cite>Dev React descobrindo POG através do useEffect</cite>
                     </blockquote>
@@ -805,7 +805,7 @@ export const processar = async (parametros: any): Promise<any> => {
                             </ul>
                         </li>
                     </ul>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>É só um microserviço, vai ser rápido!</p>
                         <cite>Tech Lead sobre feature que virou 47 microserviços</cite>
                     </blockquote>
@@ -819,7 +819,7 @@ export const processar = async (parametros: any): Promise<any> => {
                         <li>Quanto mais conhecimento, menor a capacidade de POGagem</li>
                         <li>Quanto mais disciplinado, menor a atração sobre POGs</li>
                     </ul>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>Vou realizar os testes em produção</p>
                         <cite>POGramador corajoso arrancando suspiros das mocinhas inocentes</cite>
                     </blockquote>
@@ -881,7 +881,7 @@ export const processar = async (parametros: any): Promise<any> => {
                             Porque até gambiarra merece evolução!
                         </p>
                     </div>
-                    <blockquote>
+                    <blockquote role="note" aria-label="Citação satírica">
                         <p>O código legado é a POG de ontem que ainda funciona hoje!</p>
                         <cite>Desenvolvedor mantendo código de 10 anos atrás</cite>
                     </blockquote>
