Moderniza exemplos e citações

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 <img src="img/Gregory_XIII.jpg" class="img-center img-70" alt="Retrato do Papa Gregório XIII, criador do calendário gregoriano que introduziu o ano bissexto como solução gambiarra">
                             </div>
                             <div class="col-md-8 color4-darker">
-                                <p class="lead">A primeira POG da história foi criada pelo Papa Gregório XIII</p>
+                                <p class="lead">A primeira POG registrada na história</p>
                                 <ul>
                                     <li>Nosso calendário: 365 dias</li>
                                     <li>Translação da Terra: 365,25</li>
@@ -165,8 +165,8 @@
                         <h3>29 de Fevereiro – Dia Internacional da POG</h3>
                     </div>
                     <blockquote role="note" aria-label="Citação satírica">
-                        <p>O Papa é POG</p>
-                        <cite>Engenheiros do Hawaii sobre POG</cite>
+                        <p>Ano bissexto: a gambiarra que funciona há 400 anos</p>
+                        <cite>Desenvolvedor explicando código legado</cite>
                     </blockquote>
                 </section>
 
@@ -242,8 +242,8 @@
                         <dt class="color4-darker">Proatividade Egocêntrica</dt>
                         <dd>Vamos fazer do meu jeito!</dd>
 
-                        <dt class="color4-darker">Devaneio Entusiasmado</dt>
-                        <dd>Lady Murphy? Balela! Faz desse jeito que nada vai dar errado.</dd>
+                        <dt class="color4-darker">Otimismo Irracional</dt>
+                        <dd>Lei de Murphy? Balela! Faz desse jeito que nada vai dar errado.</dd>
 
                         <dt class="color4-darker">Foco Morcegativo</dt>
                         <dd>Depois eu faço isso!</dd>
@@ -267,8 +267,8 @@
                         <dd>1337 h4x0r5 dud3 lol</dd>
                     </dl>
                     <blockquote role="note" aria-label="Citação satírica">
-                        <p>Reza e cruza os dedos que vai funcionar! </p>
-                        <cite>POG Pai de Santo falando para um POGramador menos experiente... </cite>
+                        <p>Cruza os dedos, bate na madeira e dá commit! </p>
+                        <cite>POGramador senior ensinando os júniors</cite>
                     </blockquote>
                 </section>
 
@@ -446,7 +446,7 @@ Optional.ofNullable(user)
                     </ul>
                     <blockquote role="note" aria-label="Citação satírica">
                         <p>Tive que arrumar direto no banco - daí funcionou! Se o problema "voltar", nos ligue novamente.</p>
-                        <cite>POGger sobre O Poder da Fé.</cite>
+                        <cite>POGramador sobre resolução definitiva de bugs</cite>
                     </blockquote>
                 </section>
 
@@ -545,8 +545,8 @@ anterior5, atual5, anteriorDoAnterior5
                         <li>Se alguém mexer, para tudo</li>
                     </ul>
                     <blockquote role="note" aria-label="Citação satírica">
-                        <p>Bom, deixa estourar a bomba lá, aí quando vierem me pentelhar aqui eu vejo o que faço... </p>
-                        <cite>POGramador para outro POGramador, só esperando o problema voltar </cite>
+                        <p>Deixa estourar em prod, aí quando vierem reclamar eu vejo o que faço...</p>
+                        <cite>POGramador para outro POGramador, esperando o problema voltar</cite>
                     </blockquote>
                 </section>
 
@@ -735,8 +735,8 @@ public class ProcessamentoService {
                     </ul>
                     <img src="img/megamanx.png" alt="Mega Man X, versão evoluída representando a fusão de múltiplos anti-padrões em um único método" class="img-center img-50">
                     <blockquote role="note" aria-label="Citação satírica">
-                        <p>O Senhor já tentou reiniciar seu computador? Caso sim vou pedir que desligue seu modem e religue novamente...</p>
-                        <cite>Atendente da CTBC ou Velox utilizando técnicas de TelePOG</cite>
+                        <p>Já tentou reiniciar? Caso sim, vou pedir que desligue o modem e religue novamente...</p>
+                        <cite>Suporte técnico utilizando técnicas avançadas de TelePOG</cite>
                     </blockquote>
                 </section>
 
@@ -820,7 +820,7 @@ export const processar = async (parametros: any): Promise<any> => {
                     </ul>
                     <blockquote role="note" aria-label="Citação satírica">
                         <p>Vou realizar os testes em produção</p>
-                        <cite>POGramador corajoso arrancando suspiros das mocinhas inocentes</cite>
+                        <cite>POGramador corajoso quebrando todas as regras do DevOps</cite>
                     </blockquote>
                 </section>
 
