Melhora layout do slide histórico e remove CSS inline

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
 
                 <!-- Conteúdo para touch (mobile/tablet) -->
-                <div class="help-touch" style="display: none;">
+                <div class="help-touch">
                     <div class="help-item">
                         <span class="touch-icon" aria-hidden="true">👆</span>
                         <span>Deslize para a esquerda para avançar</span>
@@ -146,24 +146,21 @@
 
                 <section>
                     <h2>Histórico da POG</h2>
-
-                    <div>
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img src="img/Gregory_XIII.jpg" class="img-center img-70" alt="Retrato do Papa Gregório XIII, criador do calendário gregoriano que introduziu o ano bissexto como solução gambiarra">
-                            </div>
-                            <div class="col-md-8 color4-darker">
-                                <p class="lead">A primeira POG registrada na história</p>
-                                <ul>
-                                    <li>Nosso calendário: 365 dias</li>
-                                    <li>Translação da Terra: 365,25</li>
-                                    <li>Problema: 6 Horas a mais por ano!</li>
-                                    <li>Resolução: um dia a mais a cada 4 anos!</li>
-                                </ul>
-                            </div>
+                    <div class="row tight-spacing">
+                        <div class="col-md-6">
+                            <img src="img/Gregory_XIII.jpg" class="img-70" alt="Retrato do Papa Gregório XIII, criador do calendário gregoriano que introduziu o ano bissexto como solução gambiarra">
                         </div>
-                        <h3>29 de Fevereiro – Dia Internacional da POG</h3>
+                        <div class="col-md-6 color4-darker">
+                            <p class="lead">A primeira POG registrada na história</p>
+                            <ul>
+                                <li>Nosso calendário: 365 dias</li>
+                                <li>Translação da Terra: 365,25</li>
+                                <li>Problema: 6 Horas a mais por ano!</li>
+                                <li>Resolução: um dia a mais a cada 4 anos!</li>
+                            </ul>
+                        </div>
                     </div>
+                    <h3>29 de Fevereiro – Dia Internacional da POG</h3>
                     <blockquote role="note" aria-label="Citação satírica">
                         <p>Ano bissexto: a gambiarra que funciona há 400 anos</p>
                         <cite>Desenvolvedor explicando código legado</cite>
