Ajusta layout mobile vertical e remove referências a café

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <li>Microsserviços que ninguém documenta</li>
                         <li>Cliente pedindo "só mais uma coisinha" antes do deploy</li>
                         <li>Processo Ágil com 15 reuniões por semana!</li>
-                        <li>Ausência de café e Wi-Fi instável</li>
+                        <li>Deadline impossível e Wi-Fi instável</li>
                     </ul>
                      <blockquote role="note" aria-label="Citação satírica">
                         <p>Eu só copiei do Stack Overflow!</p>
@@ -529,7 +529,7 @@ anterior5, atual5, anteriorDoAnterior5
                     </code></pre>
                     <blockquote role="note" aria-label="Citação satírica">
                         <p>É só reiniciar que funciona!</p>
-                        <cite>POGramador logo de manhã com copo de café na mão</cite>
+                        <cite>POGramador logo de manhã depois da daily</cite>
                     </blockquote>
                 </section>
 
